profilelist1exp/unpackaged/objects/IdeaGeneralStats__c.object
<CustomObject>
    <description>General site statistics</description>
    <fields>
        <fullName>Comments__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Comments</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommunityId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>CommunityId</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ideas__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ideas</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implideas__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total ideas implemented includes partially implemented and completely implemented.</description>
        <label>Implideas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Votes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Votes</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ideaGeneralStats</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ideaGeneralStats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>